--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -93,6 +93,15 @@
                                     <rect key="frame" x="41" y="72" width="264" height="71"/>
                                 </variation>
                             </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aet-Gm-T77">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.14861368220000001" green="0.37539881829999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="41" y="161" width="193" height="21"/>
+                                </variation>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aKa-ab-FfB">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.56478546999466062" blue="0.037467080179811263" alpha="0.75" colorSpace="calibratedRGB"/>
@@ -115,6 +124,7 @@
                                 <exclude reference="EQ1-K6-cyn"/>
                                 <exclude reference="gP7-lF-RhG"/>
                                 <exclude reference="V7M-ex-UKf"/>
+                                <exclude reference="aet-Gm-T77"/>
                                 <exclude reference="aKa-ab-FfB"/>
                             </mask>
                         </variation>
@@ -124,6 +134,7 @@
                                 <include reference="EQ1-K6-cyn"/>
                                 <include reference="gP7-lF-RhG"/>
                                 <include reference="V7M-ex-UKf"/>
+                                <include reference="aet-Gm-T77"/>
                                 <include reference="aKa-ab-FfB"/>
                             </mask>
                         </variation>
@@ -133,6 +144,7 @@
                         <outlet property="enterNameTextField" destination="EQ1-K6-cyn" id="UI3-du-dbq"/>
                         <outlet property="mailButton" destination="aKa-ab-FfB" id="B5F-Xq-Ukf"/>
                         <outlet property="messageLabel" destination="V7M-ex-UKf" id="g7E-A7-OYx"/>
+                        <outlet property="nameLabel" destination="aet-Gm-T77" id="X2R-81-FDo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6zq-e1-OGd" userLabel="First Responder" sceneMemberID="firstResponder"/>
